# HR_MULTI_AGENT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
app/: config.py
app/cache/: query_cache.py
app/core/: logger.py
app/graph/: state.py  supervisor.py
app/graph/nodes/: _base.py  critic_node.py  fallback_node.py  grievance_node.py  intake_node.py  memory_node.py  multi_specialist_node.py  planner_node.py  policy_node.py  query_rewriter_node.py  synthesiser_node.py  talent_node.py
app/ingestion/: chunker.py  ingest.py  loader.py
app/prompts/: prompts.py
app/rag/: bm25_search.py  embedder.py  pipeline.py  reranker.py  retriever.py
tests/: test_graph.py  test_hr.py  test_rag.py
ui/: streamlit_app.py
